2019/Q2/a-beginners-guide-to-kubernetes/yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server
spec:
  type: ClusterIP
  # 定義挑選 Pod 的 label
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
