2019/Q2/a-beginners-guide-to-kubernetes/yamls/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name:  hello
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /hello
            backend:
              serviceName: web-server
              servicePort: 80
